# cardio-vasc-risks

./: README.md  pyproject.toml
analysis/: balancing_dataset.ipynb  bool_viz.ipynb  categorical_viz.ipynb  cleaning.ipynb  cleaning_pre_predict.ipynb  filter.ipynb  pyproject.toml  quick_look.ipynb
analysis/scripts/: bmi.py  create_patient.py  definitions.py  generic_methods.py  patient.py  plots.py
data/filtered/: cardio_train.csv  cardio_train_unvalid.csv
data/original/: labels.txt
data/test/: cardio_train.csv
data/train/: analysis.csv
logistic_regression/: pyproject.toml
logistic_regression/logistic_regression/: linear_model.py  single_feature.py
models/: custom_decision_tree.ipynb  custom_logistic_regression.ipynb
predict/: prediction.ipynb  pyproject.toml
tree_models/tree_models/: decision_tree.py
watch/: decision_tree.md  logistic_regression.md  sources.md
