[tool.poetry]
name = "logistic-regression"
version = "0.1.0"
description = ""
authors = ["alexandre-assad & hugo-andriamaromanana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
